fixed alignment problem

--- a/TUTOR/static/css/footer.css
+++ b/TUTOR/static/css/footer.css
@@ -2,7 +2,7 @@
 /*FOOTER*/
 
 footer {
-  position: fixed;
+  /* padding-top: 10px; */
   bottom: 0;
   left: 0;
   right: 0;
@@ -11,6 +11,7 @@ footer {
   background: linear-gradient(59deg, #3A6073, #16222A);
   color: white;
   margin-top:100px;
+  clear: both;
 }
 
 footer a {
